[package]
name = "reverseproxy"
version = "0.2.0"
edition = "2021"
description = "TCP Reverse Proxy written in Rust"
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
homepage = "https://github.com/yukibtc/reverseproxy"
repository = "https://github.com/yukibtc/reverseproxy.git"
license = "MIT"
readme = "README.md"

[features]
default = ["tor"]
tor = ["dep:arti-client", "dep:tor-rtcompat"]

[dependencies]
arti-client = { version = "0.10", default-features = false, features = ["tokio", "onion-service-client", "rustls", "compression"], optional = true }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.32", features = ["macros", "net", "rt-multi-thread"] }
tokio-socks = "0.5"
tor-rtcompat = { version = "0.9", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
