[package]
name = "reverseproxy"
version = "0.2.0"
edition = "2021"
description = "TCP Reverse Proxy"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/shadowylab/reverseproxy"
repository = "https://github.com/shadowylab/reverseproxy.git"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["networking", "reverseproxy", "proxy"]

[features]
default = ["tor"]
tor = ["dep:arti-client", "dep:tor-rtcompat"]

[dependencies]
arti-client = { version = "0.20", features = ["onion-service-client", "tokio"], optional = true }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.38", features = ["macros", "net", "rt-multi-thread"] }
tokio-socks = "0.5"
tor-rtcompat = { version = "0.20", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
