[package]
name = "reverseproxy"
version = "0.3.0"
edition = "2021"
description = "TCP Reverse Proxy"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/shadowylab/reverseproxy"
repository = "https://github.com/shadowylab/reverseproxy.git"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["networking", "reverseproxy", "proxy"]

[features]
default = ["tor"]
tor = ["dep:arti-client", "dep:tor-rtcompat"]

[dependencies]
arti-client = { version = "0.22", features = ["onion-service-client", "tokio"], optional = true }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.40", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-socks = "0.5"
tor-rtcompat = { version = "0.22", optional = true }

[dev-dependencies]
tempfile = "3.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
